apps/kanboard/deployment.yaml
# Source: kanboard/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanboard
spec:
  replicas: 0
  selector:
    matchLabels:
      app: kanboard
  template:
    metadata:
      labels:
        app: kanboard
    spec:
      nodeSelector:
        kubernetes.io/hostname: worker-05
      volumes:
        - name: appdata
          persistentVolumeClaim:
            claimName: kanboard-data
      containers:
        - name: kanboard
          image: kanboard/kanboard:v1.2.54
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: appdata
              mountPath: /var/www/app/data
              subPath: data
            - name: appdata
              mountPath: /var/www/app/plugins
              subPath: plugins
            - name: appdata
              mountPath: /etc/nginx/ssl
              subPath: ssl
          ports:
            - containerPort: 80
              name: kanboard-http
            - containerPort: 443
              name: kanboard-https
