apps/kanboard/service.yaml
# Source: kanboard/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kanboard
spec:
  selector:
    app: kanboard
  ports:
    - name: kanboard-http
      port: 80
    - name: kanboard-https
      port: 443
