apps/kanboard/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kanboard-httproute
spec:
  parentRefs:
    - name: default-https-gateway
      namespace: istio-system

  hostnames:
    - kanboard.home.alden.ai

  # parentRefs:
  # # - name: default-https-gateway
  # #   namespace: istio-system
  # - kind: Service
  #   name: kanboard
  #   port: 80
  # hostnames:
  # - "kanboard.home.alden.ai"
  rules:
  - backendRefs:
    - name: kanboard
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
