apps/kanboard/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: kanboard-virtualservice
spec:
  hosts:
    - kanboard.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kanboard.kanboard.svc.cluster.local
            port:
              number: 80
