apps/kanboard/authorizationpolicy.yaml
apiVersion: 'security.istio.io/v1beta1'
kind: 'AuthorizationPolicy'
metadata:
  name: 'kanboard'
spec:
  selector:
    matchLabels:
      app: kanboard
  action: 'CUSTOM'
  provider:
    name: 'authelia'
  rules:
    - to:
        - operation:
            hosts:
              - 'kanboard.home.alden.ai'
